# fantasybattle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  insane-computer.bat
battles/crossings-of-erui/: army-statblocks-spreadsheet.xlsx  build_mission_briefing_pdf.py  mission-briefing.md
battles/crossings-of-erui/statcards/: castamir_brute.json  castamir_captain_aurandir.json  castamir_castamir.json  castamir_corsair_archers.json  castamir_corsair_infantry_spears.json  castamir_corsair_spearmen.json  castamir_gondor_archers.json  castamir_gondor_spearmen.json  castamir_gondorian_archers.json  castamir_gondorian_infantry_spears.json  castamir_hero_calimir.json  castamir_hero_castamir.json  castamir_hero_minardil.json  castamir_hero_the_brute.json  eldacar_aldamir_son_of_eldacar.json  eldacar_eldacar.json  eldacar_hero_aldamir.json  eldacar_hero_eldacar.json  (+19 more)
battles/dawn-of-the-golden-spawn-2-lilypad-hell/: _edit_ai.py  _strip_aiprivate.py  _verify.py  build_gm_pdf.py  gm-reference.md  player-references-rethemed.md
paranoia/hank-6/: build_gm_reference_pdf.py  generate_handouts_pdf.py  hank-badges.ai  hanksync_convention_packet_v3.md  make_chest_patches.py  make_tent.py
paranoia/insane-computer/: README.md  insane_computer.py  requirements.txt  soundboard.json
scripts/: booklet_impose.py
scripts/statcards/: README.md  extract_crossings_of_erui.py  generate_statcard.py  statcard.schema.json
simulator/: CMakeLists.txt  application.cpp  application.hpp  imgui_parameter.hpp  imgui_render_window.cpp  imgui_render_window.hpp
src/: CMakeLists.txt  application.cpp  application.hpp  battlefield.hpp  components.hpp  dice.hpp  factories.hpp  game_session.hpp  main.cpp  systems.hpp  tags.hpp
(+31 files in other folders)
